<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_8sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/table_item_border"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_8sdp"
                    android:text="@string/day"
                    android:textAlignment="center"
                    android:textColor="@color/main_TextColor"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:id="@+id/dateReservation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/_8sdp"
                    android:textAlignment="center"
                    android:textColor="@color/main_TextColor"
                    android:textSize="@dimen/_12ssp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_8sdp"
                    android:text="@string/doctor"
                    android:textAlignment="center"
                    android:textColor="@color/main_TextColor"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:id="@+id/doctorReservation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/_8sdp"
                    android:textAlignment="center"
                    android:textColor="@color/main_TextColor"
                    android:textSize="@dimen/_12ssp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_8sdp"
                    android:text="@string/time"
                    android:textAlignment="center"
                    android:textColor="@color/main_TextColor"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:id="@+id/timeReservation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/_8sdp"
                    android:textAlignment="center"
                    android:textColor="@color/main_TextColor"
                    android:textSize="@dimen/_12ssp" />
            </TableRow>

        </TableLayout>

        <TextView
            android:id="@+id/cancelAppointments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:text="@string/cancel_appointments"
            android:textAlignment="center"
            android:textColor="@color/colorCancel"
            android:textSize="@dimen/_14ssp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>